--- a/projectMainApp/templates/login_page.html
+++ b/projectMainApp/templates/login_page.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Login Page</title>
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css_files/login.css' %}">
-</head>
-<body>
-<div class="background">
-    <div class="shape"></div>
-    <div class="shape"></div>
-</div>
-<form method="post">
-    <h3>Login Here</h3>
-    <label for="username">Username</label>
-    <input type="text" placeholder="Username/Email" id="username" name="username">
-
-    <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password" name="password">
-
-    <button type="submit">Log In</button>
-    <a href="{% url 'signup' %}">Create a account</a>
-</form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>LogIn Page</title>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css_files/home.css' %}">
+    </head>
+    <body>
+        <div class="full-page">
+            <div class="navbar">
+                <div>
+                    <img class="logo" src="{% static 'images/logo.jpg' %}">
+                </div>
+                <nav>
+                    <ul id='MenuItems'>
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href='#'>About Us</a></li>
+                        <li><a href='#'>Services</a></li>
+                        <li><a href='#'>Contact</a></li>
+                        <li><a href="{% url 'signup' %}" style="width:auto;">Signup</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="form-box">
+                <div class='headline-box'>
+                    <div class='headline'>Login</div>
+                </div>
+                <form id='register' class='input-group-register' method="post">
+                    {% if messages %}
+                    <ul>
+                        {% for message in messages %}
+                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                            {{ message }}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    <input type='text' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
+                    <input type='password' class='input-field' placeholder='Enter Password' required id="password" name="password">
+                    <button type='submit' class='submit-btn'>Log in</button>
+                    <a style="text-align: center;" href="{% url 'forget_password' %}"><font size="4" style="text-align:center;">Forget Password?</font></a>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
