updated html pages.

--- a/projectMainApp/templates/forget_password.html
+++ b/projectMainApp/templates/forget_password.html
@@ -18,6 +18,7 @@
         <li><a href='#'>About Us</a></li>
         <li><a href='#'>Services</a></li>
         <li><a href='#'>Contact</a></li>
+        <li><a href="{% url 'login' %}" style="width:auto;">Login</a></li>
         <li><a href="{% url 'signup' %}" style="width:auto;">Signup</a></li>
       </ul>
     </nav>
@@ -38,7 +39,6 @@
       {% endif %}
       <input type='email' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
       <button type='submit' class='submit-btn'>Send Recovery Email</button>
-      <a href="{% url 'login' %}"><font size="4">Login</font></a>
     </form>
   </div>
 </div>
