--- a/projectMainApp/templates/home_page.html
+++ b/projectMainApp/templates/home_page.html
@@ -19,6 +19,7 @@
             <li><a href='#'>Services</a></li>
             <li><a href='#'>Contact</a></li>
             <li><a href="{% url 'login' %}" style="width:auto;">Login</a></li>
+            <li><a href="{% url 'signup' %}" style="width:auto;">Signup</a></li>
           </ul>
         </nav>
       </div>
