--- a/projectMainApp/static/css_files/home.css
+++ b/projectMainApp/static/css_files/home.css
@@ -13,16 +13,16 @@
 }
 .full-page
 {
-    height: 100%;
-	width: 100%;
+    height: auto;
+    min-height: 100%;
+	width: auto;
+	min-width: 100%;
     padding-top: 50px;
 	background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../images/background_img.jpg);
 	background-attachment: fixed;
     background-position: 0px 0px;
 	background-size: cover;
 	position: absolute;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
 }
 .navbar
 {
@@ -34,13 +34,14 @@
     align-items: center;
     padding: 0px;
     padding-left: 50px;
-    padding-right: 30px;
+    padding-right: 50px;
     padding-top: 10px;
 }
 nav
 {
     flex: 1;
-    text-align: left;
+    text-align: right;
+    padding-right: 50px;
 }
 nav ul
 {
@@ -50,7 +51,7 @@ nav ul
 nav ul li
 {
     display: inline-block;
-    margin-right: 70px;
+    margin-right: 30px;
 }
 nav ul li a
 {
@@ -135,6 +136,7 @@ a
 	cursor: pointer;
 	display: block;
 	margin: auto;
+	margin-top: 20px;
 	background: #F3C693;
 	border: 0;
 	outline: none;
