added new html pages.

--- a/projectMainApp/templates/reset_password_page.html
+++ b/projectMainApp/templates/reset_password_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Forget Password</title>
+  <title>Reset Password</title>
   {% load static %}
   <link rel="stylesheet" href="{% static 'css_files/home.css' %}">
 </head>
@@ -17,8 +17,6 @@
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about_us' %}">About Us</a></li>
         <li><a href="{% url 'contact_us' %}">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'signup' %}">Signup</a></li>
       </ul>
     </nav>
   </div>
@@ -33,11 +31,14 @@
     </ul>
     {% endif %}
     <div class='headline-box'>
-      <div class='headline'>Forget Password</div>
+      <div class='headline'>Reset Password</div>
     </div>
     <form id='register' class='input-group-register' method="post">
-      <input type='text' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
-      <button type='submit' class='submit-btn'>Send Recovery Email</button>
+      <input type='text' class='input-field' placeholder='UserName' required id="username" name="username">
+      <input type='password' class='input-field' placeholder='Current Password' required id="old_password" name="old_password">
+      <input type='password' class='input-field' placeholder='New Password' required id="new_password" name="new_password">
+      <input type='password' class='input-field' placeholder='Confirm Password' required id="confirm_password" name="confirm_password">
+      <button type='submit' class='submit-btn'>Change Password</button>
     </form>
   </div>
 </div>
