--- a/projectMainApp/templates/contact_us_page.html
+++ b/projectMainApp/templates/contact_us_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Forget Password</title>
+  <title>Contact Us</title>
   {% load static %}
   <link rel="stylesheet" href="{% static 'css_files/home.css' %}">
 </head>
@@ -16,28 +16,29 @@
       <ul id='MenuItems'>
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about_us' %}">About Us</a></li>
-        <li><a href="{% url 'contact_us' %}">Contact</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'signup' %}">Signup</a></li>
       </ul>
     </nav>
   </div>
   <div class="form-box">
-    {% if messages %}
-    <ul>
-      {% for message in messages %}
-      <li {% if message.tags %} style="list-style: none; text-align:center; color:white; margin-bottom:20px;" class="{{ message.tags }}"{% endif %}>
-        {{ message }}
-      </li>
-      {% endfor %}
-    </ul>
-    {% endif %}
     <div class='headline-box'>
-      <div class='headline'>Forget Password</div>
+      <div class='headline'>Contact Us</div>
     </div>
     <form id='register' class='input-group-register' method="post">
-      <input type='text' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
-      <button type='submit' class='submit-btn'>Send Recovery Email</button>
+      {% if messages %}
+      <ul>
+        {% for message in messages %}
+        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+          {{ message }}
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+      <input type='text' class='input-field' placeholder='Full Name' required id="name" name="name">
+      <input type='email' class='input-field'placeholder='Email Id' required id="email" name="email">
+      <textarea placeholder='Enter comment...' class='input-field' maxlength='200' style="text-align:left;"></textarea>
+      <button type='submit' class='submit-btn'>Send</button>
     </form>
   </div>
 </div>
