--- a/projectMainApp/templates/home_page.html
+++ b/projectMainApp/templates/home_page.html
@@ -10,27 +10,35 @@
     <div class="full-page">
       <div class="navbar">
         <div>
-          <img class="logo" src="{% static 'images/logo.jpg' %}">
+          <a href="{% url 'home' %}"><img class="logo" src="{% static 'images/logo.jpg' %}"></a>
         </div>
         <nav>
           <ul id='MenuItems'>
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href='#'>About Us</a></li>
-            <li><a href='#'>Services</a></li>
-            <li><a href='#'>Contact</a></li>
-            <li><a href="{% url 'login' %}" style="width:auto;">Login</a></li>
-            <li><a href="{% url 'signup' %}" style="width:auto;">Signup</a></li>
+            <li><a href="{% url 'about_us' %}">About Us</a></li>
+            <li><a href="{% url 'contact_us' %}">Contact</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'signup' %}">Signup</a></li>
           </ul>
         </nav>
       </div>
       <div>
+        {% if messages %}
+        <ul>
+          {% for message in messages %}
+          <li {% if message.tags %} style="list-style: none; text-align:center; color:white; margin-bottom:20px;" class="{{ message.tags }}"{% endif %}>
+            {{ message }}
+          </li>
+          {% endfor %}
+        </ul>
+        {% endif %}
         <div class="tile-box">
           {% if items %}
             {% for car_part in items %}
             <div class="column-4">
               <ul>
                 <li>
-                  <img src="https://www.kindpng.com/picc/m/427-4271782_car-detailing-vector-library-stock-black-and-white.png" width="150" height="150">
+                  <img src="{{ car_part.img_url }}" width="150" height="150">
                   <h2>{{ car_part.car_part_name }}</h2>
                   <h2>{{ car_part.price }}</h2>
                 </li>
@@ -39,15 +47,6 @@
             {% endfor %}
           {% endif %}
         </div>
-        {% if messages %}
-        <ul>
-          {% for message in messages %}
-          <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-            {{ message }}
-          </li>
-          {% endfor %}
-        </ul>
-        {% endif %}
       </div>
     </div>
   </body>
