--- a/projectMainApp/templates/login_page.html
+++ b/projectMainApp/templates/login_page.html
@@ -10,32 +10,31 @@
         <div class="full-page">
             <div class="navbar">
                 <div>
-                    <img class="logo" src="{% static 'images/logo.jpg' %}">
+                    <a href="{% url 'home' %}"><img class="logo" src="{% static 'images/logo.jpg' %}"></a>
                 </div>
                 <nav>
                     <ul id='MenuItems'>
                         <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href='#'>About Us</a></li>
-                        <li><a href='#'>Services</a></li>
-                        <li><a href='#'>Contact</a></li>
-                        <li><a href="{% url 'signup' %}" style="width:auto;">Signup</a></li>
+                        <li><a href="{% url 'about_us' %}">About Us</a></li>
+                        <li><a href="{% url 'contact_us' %}">Contact</a></li>
+                        <li><a href="{% url 'signup' %}">Signup</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="form-box">
+                {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                    <li {% if message.tags %} style="list-style: none; text-align:center; color:white; margin-bottom:20px;" class="{{ message.tags }}"{% endif %}>
+                        {{ message }}
+                    </li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
                 <div class='headline-box'>
                     <div class='headline'>Login</div>
                 </div>
                 <form id='register' class='input-group-register' method="post">
-                    {% if messages %}
-                    <ul>
-                        {% for message in messages %}
-                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                            {{ message }}
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    {% endif %}
                     <input type='text' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
                     <input type='password' class='input-field' placeholder='Enter Password' required id="password" name="password">
                     <button type='submit' class='submit-btn'>Log in</button>
