--- a/projectMainApp/templates/login_page.html
+++ b/projectMainApp/templates/login_page.html
@@ -37,8 +37,8 @@
                 <form id='register' class='input-group-register' method="post">
                     <input type='text' class='input-field' placeholder='Email/UserName' required id="email_username" name="email_username">
                     <input type='password' class='input-field' placeholder='Enter Password' required id="password" name="password">
-                    <button type='submit' class='submit-btn'>Log in</button>
-                    <a style="text-align: center;" href="{% url 'forget_password' %}"><font size="4" style="text-align:center;">Forget Password?</font></a>
+                    <button type='submit' class='submit-btn' style="margin-bottom:20px">Log in</button>
+                    <a style="text-decoration: none; margin-top:20px; position:center; font-size:17px;" href="{% url 'forget_password' %}">Forget Password ?</a>
                 </form>
             </div>
         </div>
