--- a/projectMainApp/templates/home_page.html
+++ b/projectMainApp/templates/home_page.html
@@ -18,6 +18,7 @@
             <li><a href="{% url 'about_us' %}">About Us</a></li>
             <li><a href="{% url 'contact_us' %}">Contact</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
             <li><a href="{% url 'signup' %}">Signup</a></li>
             <li><a href="{% url 'user_profile' %}">User Profile</a></li>
           </ul>
